src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Big5__c</fullName>
        <formula>Contact.FirstName + Contact.LastName + TEXT( Contact.Birthdate) + Policy_ID__c + Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Big5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Indicator_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complex Indicator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complex_Indicator__c</fullName>
        <label>Complex Indicator</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>Member ID of family in SNI program.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>E&amp;I = Member ID
C&amp;S = Medicaid Number</inlineHelpText>
        <label>Member ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <description>Policy ID for the subscriber of the family.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Policy ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Family member’s Relationship in the family.</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child/Other</fullName>
                </value>
                <value>
                    <fullName>Non-Policy Caregiver</fullName>
                </value>
                <value>
                    <fullName>Spouse/Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Subscriber/Recipient</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Provider User</fullName>
                </value>
                <value>
                    <fullName>Provider Team</fullName>
                </value>
                <value>
                    <fullName>Provider Team Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>